--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run dev --prefix ./client",
-    "all": "concurrently \"npm run server\" \"npm run client\""
+    "all": "concurrently \"npm run server\" \"npm run client\"",
+    "netStart": ".\\node_modules\\.bin\\netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src"
   },
   "keywords": [],
   "author": "Malik Khubiev <malik.hubiev@mail.ru>",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1582.0",
     "bcrypt": "^5.0.1",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
@@ -24,7 +27,12 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "mock-aws-s3": "^4.0.2",
+    "netlify-lambda": "^2.0.16",
+    "nock": "^13.5.4",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.14.1",
+    "serverless-http": "^3.2.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
