--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://notes-7ad5.onrender.com/
+REACT_APP_API_URL=https://notes-3-ilv1.onrender.com/
 # REACT_APP_API_URL=http://localhost:5000/
